--- a/client/navigation/navigation.html
+++ b/client/navigation/navigation.html
@@ -4,6 +4,10 @@
 			<a class="band" href="#">Fakebook</a>
 			<ul class="nav">
 				<li> <a href="/">Message Board</a></li>
+				<li class="active"> <a href="/">Link1</a></li>
+				<li> <a href="/">Link2</a></li>
+				<li> <a href="/">Link3</a></li>
+
 			</ul>
 		</div>
 	</div>
