--- a/client/fb_type.html
+++ b/client/fb_type.html
@@ -4,5 +4,15 @@
 
 <body>
   {{>navigation}}
+  <div class="container">
+  	<div class="row">
+  		<div class="span2">
+  			{{>sidebar}}
+  		</div>
+  		<div class="span10">
+
+  		</div>
+  	</div>
+ </div>
 </body>
 
