--- a/client/fb_type.html
+++ b/client/fb_type.html
@@ -4,13 +4,13 @@
 
 <body>
   {{>navigation}}
-  <div class="container">
+ <div class="container">
   	<div class="row">
   		<div class="span2">
   			{{>sidebar}}
   		</div>
-  		<div class="span10">
-
+  		<div class="span5">
+  			{{renderPage}}
   		</div>
   	</div>
  </div>
