--- a/client/home/home.html
+++ b/client/home/home.html
@@ -1,10 +1,6 @@
 <template name="home">
-	<div class="row">
-		<div class="page-header">
-			<h1> hjkhdjkhome spr</h1>
-		</div>
-		<div class="span12">
-
-		</div>
+	<div class="well well-large">
+		<label for="posttext">Update Status</label>
+		<input placeholder="What up !" class="input-xxlarge posttext" type="text" name="posttext" value="" id="posttext">
 	</div>
 </template>
