--- a/client/home/home.html
+++ b/client/home/home.html
@@ -3,4 +3,8 @@
 		<label for="posttext">Update Status</label>
 		<input placeholder="What up !" class="input-xxlarge posttext" type="text" name="posttext" value="" id="posttext">
 	</div>
+
+	<ul id ="postlist" class="unstyled">
+		{{>post}}
+	 </ul>
 </template>
