--- a/client/sidebar/sidebar.html
+++ b/client/sidebar/sidebar.html
@@ -2,6 +2,12 @@
 	<ul class ="nav nav-list">
 		<li class="nav-header">Favourite</li>
 		<li class ="active"> <a href="/home">New Feed </a></li>
+		<li> <a href ="/messages">Messages></a></li>
+		<li> <a href ="/events">Events</a></li>
+		<li> <a href ="/photos">Photos</a></li>
+		<li> <a href ="/browse">Browse</a></li>
+		<li> <a href ="/findfriends">Find Friend</a></li>
 		<li> <a href ="#">Friend</a></li>
+
 	</ul>
 </template>
